# estatefox

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  index.html  package.json
.github/: release.yml
.github/workflows/: ci.yml  deploy-aws.yml  deploy-web.yml  deploy.yml  pr-preview.yml  release.yml
backend/: CHECK_RESULTS.md  CLAUDE.md  Dockerfile  README.md  coverage.xml  pyproject.toml
backend/.github/workflows/: ci.yml  deploy.yml
backend/docs/: ARCHITECTURE.md
backend/scripts/: export-openapi.py  initial-deploy.sh
backend/src/estatefox_api/: __init__.py  config.py  main.py
backend/src/estatefox_api/routes/: __init__.py  items.py
backend/src/estatefox_api/schemas/: __init__.py  base.py  items.py
backend/tests/: __init__.py  conftest.py  test_health.py  test_items.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DOMAIN-SETUP.md  OLD_SITE_ANALYSIS.md  PERFORMANCE.md
frontend/: .gitignore  .npmrc  CLAUDE.md  README.md  app.json  eas.json  jest.config.js  jest.presetup.js  jest.setup.ts  openapi-ts.config.ts  package-lock.json  package.json
frontend/app/: _layout.tsx  index.tsx
frontend/assets/: .gitkeep
frontend/constants/: theme.ts
frontend/docs/: API-CLIENT.md  BRANDING.md  TESTING.md
notes/: issue-10-notes.md  issue-6-code-review.md  issue-6-notes.md
scripts/: release.sh
specs/: issue-10-fix-frontend-tests.md  issue-12-fix-frontend-tests.md  issue-14-bring-frontend-test-coverage-to-70.md  issue-16-build-shell-site.md  issue-2-test-add-readme-badges.md  issue-4-fix-tests.md  issue-6-fix-tests.md
(+31 files in other folders)
